# full-stack-template

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  deployment.md  development.md  docker-compose.test.yml  docker-compose.yml  logs.txt  package-lock.json  package.json  release-notes.md
backend/: Dockerfile  README.md  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: bcb9703052b0_initial_migration.py
backend/app/: config.py  dependencies.py  main.py  models.py  schemas.py
backend/app/auth/: models.py  router.py  schemas.py  security.py  service.py
backend/app/database/: check.py  core.py  seed.py
backend/app/items/: models.py  router.py  schemas.py  service.py
backend/app/models/: user.py
backend/app/users/: models.py  router.py  schemas.py  service.py
backend/scripts/: prestart.sh
backend/tests/: conftest.py  test_database.py  test_items.py  test_seed.py  test_users.py
backend/tests/integration/: conftest.py  test_auth_flow.py  test_items_flow.py  test_users_flow.py
backend/tests/unit/: __init__.py  conftest.py  test_seed.py
frontend/: Dockerfile  README.md  biome.json  index.html  nginx.conf  openapi-ts.config.ts  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/public/: index.html  manifest.json
frontend/src/: App.js  App.tsx  main.tsx  theme.ts
frontend/src/api/: api.js  auth.js  items.js  users.js
frontend/src/client/: index.ts  schemas.gen.ts  sdk.gen.ts  types.gen.ts
scripts/: build-push-deploy.sh  generate-client.sh  integration-tests.sh
(+83 files in other folders)
